<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground_image"
    tools:context=".SignUpActivity">
    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/sign_up"
        android:id="@+id/login_page_logo"
        />
    <LinearLayout
        android:id="@+id/login_page"
        android:gravity="center"
        android:layout_below="@+id/login_page_logo"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welocme_to_medi_charm"
            android:textColor="#1FE627"
            />
        <TextView
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lets_just_goo"
            android:textColor="#1FE627"
            />
        <EditText
            android:id="@+id/signup_emial"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:hint="@string/enter_e_mail"
            android:layout_marginTop="10dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_corner"
            />
        <EditText
            android:id="@+id/signup_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:hint="@string/enter_password"
            android:layout_marginTop="10dp"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_corner"
            />
        <EditText
            android:id="@+id/signup_conform_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:hint="@string/re_enter_password"
            android:layout_marginTop="10dp"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_corner"
            />
        <Button
            android:id="@+id/register_buttion"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#2FD035"
            android:text="@string/register"
            />
        <ProgressBar
            android:id="@+id/loader"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:indeterminateTint="#00FF0B"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_page"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:textColor="#615B5B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adready_have_an_account"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/login_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            />
    </LinearLayout>
</RelativeLayout>