<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baground_image"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/login"
        android:id="@+id/login_page_logo"
        />
    <LinearLayout
        android:id="@+id/login_page"
        android:gravity="center"
        android:layout_below="@+id/login_page_logo"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Its So Good"
            android:textColor="#1FE627"
            />
        <TextView
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="To See You!!"
            android:textColor="#1FE627"
            />
        <EditText
            android:id="@+id/login_emial"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:hint="@string/enter_e_mail"
            android:layout_marginTop="10dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_corner"
            />
        <EditText
            android:id="@+id/login_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:hint="@string/enter_password"
            android:layout_marginTop="20dp"
            android:layout_width="320sp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_corner"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/login_buttion"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#2FD035"
            android:text="@string/login"
            />
        <ProgressBar
            android:id="@+id/login_loader"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:indeterminateTint="#00FF0B"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_page"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:textColor="#615B5B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_any_account"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/signup_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            />
    </LinearLayout>
</RelativeLayout>